logs/dag_id=website_crawler/run_id=manual__2023-09-10T15:57:01.927148+00:00/task_id=create_data_table/attempt=1.log
[2023-09-10T15:57:17.120+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: website_crawler.create_data_table manual__2023-09-10T15:57:01.927148+00:00 [queued]>
[2023-09-10T15:57:17.141+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: website_crawler.create_data_table manual__2023-09-10T15:57:01.927148+00:00 [queued]>
[2023-09-10T15:57:17.144+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 4
[2023-09-10T15:57:17.207+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_data_table> on 2023-09-10 15:57:01.927148+00:00
[2023-09-10T15:57:17.230+0000] {standard_task_runner.py:57} INFO - Started process 79 to run task
[2023-09-10T15:57:17.245+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'website_crawler', 'create_data_table', 'manual__2023-09-10T15:57:01.927148+00:00', '--job-id', '479', '--raw', '--subdir', 'DAGS_FOLDER/crawl_data_log_into_postgres.py', '--cfg-path', '/tmp/tmpzgfnvxu5']
[2023-09-10T15:57:17.260+0000] {standard_task_runner.py:85} INFO - Job 479: Subtask create_data_table
[2023-09-10T15:57:17.441+0000] {task_command.py:415} INFO - Running <TaskInstance: website_crawler.create_data_table manual__2023-09-10T15:57:01.927148+00:00 [running]> on host 30cb2bd58730
[2023-09-10T15:57:17.703+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='website_crawler' AIRFLOW_CTX_TASK_ID='create_data_table' AIRFLOW_CTX_EXECUTION_DATE='2023-09-10T15:57:01.927148+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-10T15:57:01.927148+00:00'
[2023-09-10T15:57:17.712+0000] {sql.py:274} INFO - Executing: -- create data table
create_data_table = """
            CREATE TABLE IF NOT EXISTS test2(
            title CHAR(5000) NOT NULL,
            author CHAR(5000) NOT NULL,
            date CHAR(5000) NOT NULL,
            time CHAR(5000) NOT NULL,
            summary CHAR(5000) NOT NULL);
          """
[2023-09-10T15:57:17.746+0000] {base.py:73} INFO - Using connection ID 'postgres_local' for task execution.
[2023-09-10T15:57:17.783+0000] {base.py:73} INFO - Using connection ID 'postgres_local' for task execution.
[2023-09-10T15:57:17.802+0000] {sql.py:418} INFO - Running statement: -- create data table
create_data_table = """
            CREATE TABLE IF NOT EXISTS test2(
            title CHAR(5000) NOT NULL,
            author CHAR(5000) NOT NULL,
            date CHAR(5000) NOT NULL,
            time CHAR(5000) NOT NULL,
            summary CHAR(5000) NOT NULL);
          """, parameters: None
[2023-09-10T15:57:17.811+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "create_data_table"
LINE 2: create_data_table = """
        ^

[2023-09-10T15:57:17.891+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=website_crawler, task_id=create_data_table, execution_date=20230910T155701, start_date=20230910T155717, end_date=20230910T155717
[2023-09-10T15:57:17.937+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 479 for task create_data_table (syntax error at or near "create_data_table"
LINE 2: create_data_table = """
        ^
; 79)
[2023-09-10T15:57:18.030+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-10T15:57:18.167+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
